--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -13672,7 +13672,8 @@ td a {
   color: #2980B9;
   text-decoration: underline;
 }
-#itls-table_wrapper {
+.dataTables_wrapper {
+  margin-top: 25px;
   margin-bottom: 50px;
 }
 input[type="search"] {
@@ -13688,6 +13689,12 @@ input[type="search"] {
 }
 .fa-times {
   color: red;
+}
+.mac {
+  color: #7f8c8d;
+}
+.mac-description {
+  color: #95a5a6;
 }
 /*!
  *  Font Awesome 4.3.0 by @davegandy - http://fontawesome.io - @fontawesome
