--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -26,7 +26,8 @@ td a {
   text-decoration: underline;
 }
 //Add Margin at bottom of datatables
-#itls-table_wrapper {
+.dataTables_wrapper {
+  margin-top: 25px;
   margin-bottom: 50px;
 }
 
@@ -51,6 +52,17 @@ input[type="search"] {
 .fa-times{
   color: red;
 }
+
+//Style MAC addresses
+.mac {
+  color: #7f8c8d;
+}
+
+//Style MAC descriptions
+.mac-description {
+  color: #95a5a6;
+}
+
 
 @import "fontawesome/font-awesome";
 //@import "dataTables";
