--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -62,7 +62,23 @@ input[type="search"] {
 .mac-description {
   color: #95a5a6;
 }
+.login-screen {
+  background-color: #34495e;
+}
 
+//Style login header
+.login-header {
+  color: white;
+}
+
+//No border radius on navbar
+.navbar {
+  border-radius: 0px;
+}
+
+th {
+  text-align: center;
+}
 
 @import "fontawesome/font-awesome";
 //@import "dataTables";
