--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -76,5 +76,9 @@ input[type="search"] {
   border-radius: 0px;
 }
 
+.sql-box {
+  margin-top: 60px;
+}
+
 @import "fontawesome/font-awesome";
 //@import "dataTables";
